--- a/app/styles/base.less
+++ b/app/styles/base.less
@@ -10,7 +10,7 @@
 }
 
 html {
-    font-family: 'Open Sans', sans-serif;
+    font-family: @main-font;
 }
 
 .outer-container {
@@ -38,7 +38,7 @@ html {
     content: "";
     height: 1px;
     width: 100px;
-    background: #E8E8E8;
+    background: @light-gray;
     margin: 10px auto 0;
 }
 
@@ -49,7 +49,7 @@ header {
 
 header a {
     text-decoration: none; 
-    color: #000;
+    color: @black;
 }
 
 .logo-section {
@@ -63,7 +63,7 @@ header a {
 }
 
 .logo-text {
-    font-family: 'Lily Script One', cursive;
+    font-family: @logo-font;
 }
 
 .logo-text span {
@@ -90,13 +90,12 @@ header a {
 }
 
 .menu-container a:hover {
-    color: #888688;
+    color: @dark-gray;
 }
 
 .menu-container a:active {
-    color: #D4D3D4;
+    color: @light-gray;
 }
-
 
 /* catalog-page styles*/
 
@@ -112,7 +111,7 @@ header a {
 
 .catalog-item a {
     text-decoration: none;
-    color: #000;
+    color: @black;
 }
 
 .catalog-item a:hover {
@@ -158,13 +157,13 @@ header a {
 }
 
 .item-page .description-container strong {
-    color: #7A7A7A;
+    color: @middle-gray;
     font-weight: 400;
     margin-right: 10px;
 }
 
 .item-page .description-container .price {
-    color: #000;
+    color: @black;
     margin-top: 2em;
     font-size: 1.7em;
     font-weight: 600;
@@ -205,7 +204,7 @@ textarea {
 textarea[placeholder],
 input[placeholder],
 select {
-    font-family: 'Open Sans', sans-serif;
+    font-family: @main-font;
     font-size: 0.9em;
     font-weight: 400;
     line-height: 0.9em;
@@ -219,11 +218,11 @@ textarea {
 
 button {
     display: inline-block;
-    background-color: #fff;
-    border: solid 1px #445162;
+    background-color: @white;
+    border: solid 1px @dark-gray;
     border-radius: 3px;
     padding: 0 20px;
-    color: #445162;
+    color: @dark-gray;
     letter-spacing: 1px;
     font-size: 1em;
     font-weight: 600;
@@ -234,11 +233,12 @@ button {
 }
 
 button:hover {
-    background-color: #f1ffff;
+    border-color: @black;
+    color: @black;
 }
 
 button:active {
-    background-color: #f1f1f1;
+    background-color: @light-gray;
 }
 
 
@@ -254,8 +254,8 @@ button:active {
 footer {
     line-height: 100px;
     text-align: center;
-    color: #fff;
-    background-color: #000;
+    color: @white;
+    background-color: @black;
     margin-top: 70px;
     width: 100%;
 }
